--- a/templates/index.html
+++ b/templates/index.html
@@ -2,18 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <link rel="icon" href="/favicon.ico"/>
+    <link rel="icon" href="/templates/favicon.ico"/>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta name="theme-color" content="#000000"/>
     <meta name="description" content="Web site created using create-react-app"/>
-    <link rel="apple-touch-icon" href="/logo192.png"/>
-    <link rel="manifest" href="/manifest.json"/>
+    <link rel="apple-touch-icon" href="/templates/logo192.png"/>
+    <link rel="manifest" href="/templates/manifest.json"/>
     <title>SkyPro Python</title>
-    <link href="/css/main.3627056f.chunk.css" rel="stylesheet">
+    <link href="/static/css/main.3627056f.chunk.css" rel="stylesheet">
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
-<div id="root"></div>
+<div id="root">
+
+</div>
 <script>!function (e) {
     function r(r) {
         for (var n, p, f = r[0], l = r[1], i = r[2], c = 0, s = []; c < f.length; c++) p = f[c], Object.prototype.hasOwnProperty.call(o, p) && o[p] && s.push(o[p][0]), o[p] = 0;
@@ -72,7 +74,7 @@
     var a = l;
     t()
 }([])</script>
-<script src="/js/2.c38f28a7.chunk.js"></script>
-<script src="/js/main.0041c12b.chunk.js"></script>
+<script src="/static/js/2.c38f28a7.chunk.js"></script>
+<script src="/static/js/main.0041c12b.chunk.js"></script>
 </body>
 </html>
